--- a/app/dockerfile
+++ b/app/dockerfile
@@ -7,7 +7,7 @@ COPY app.py ${LAMBDA_TASK_ROOT}
 # from your project folder.
 
 COPY requirements.txt  .
-RUN  pip3 install -r requirements.txt --target "${LAMBDA_TASK_ROOT}"
+# RUN  pip3 install -r requirements.txt --target "${LAMBDA_TASK_ROOT}"
 
 # Set the CMD to your handler (could also be done as a parameter override outside of the Dockerfile)
 CMD [ "app.handler" ] 
