--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ on:
 
   pull_request:
     branches: [ main ]
+    paths:
+     - app/**
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
