--- a/Templates/trigger_s3_multiplelambda_dockerImage.yml
+++ b/Templates/trigger_s3_multiplelambda_dockerImage.yml
@@ -36,6 +36,10 @@ Resources:
       - ProcessingLambdaPermission
     Properties:
       BucketName: !Ref BucketName
+      BucketEncryption:
+        ServerSideEncryptionConfiguration:
+          - ServerSideEncryptionByDefault:
+              SSEAlgorithm: AES256
 
       Tags:
         - Key: Primayowner
