--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,8 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-
-  pull_request:
+  push:
+    # Triggers the workflow on push or pull request events but only for the main branch
     branches: [buildandpush]
     paths:
       - ".github/workflows/main.yml"
