--- a/Templates/basic_lambda_dockerImage.yml
+++ b/Templates/basic_lambda_dockerImage.yml
@@ -5,11 +5,11 @@ Parameters:
     Description: " Enter a name that describes the purpose of your function., up to 64 characters in length"
     Type: String
 
-  EnvName:
-    Type: String
-    Description: Name of an environment. 'dev', 'staging', 'prod' and any name.
-    AllowedPattern: ^.*[^0-9]$
-    ConstraintDescription: Must end with non-numeric character.
+  # EnvName:
+  #   Type: String
+  #   Description: Name of an environment. 'dev', 'staging', 'prod' and any name.
+  #   AllowedPattern: ^.*[^0-9]$
+  #   ConstraintDescription: Must end with non-numeric character.
 
   LambdaMemorySize:
     Type: String
@@ -30,12 +30,12 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       Description: "LambdaFunciton"
-      Environment:
-        Variables:
-          ENV:
-            Fn::Sub: ${EnvName}
-          TZ: UTC
-      FunctionName: !Join ["-", [!Ref LambdaName, app]]
+      # Environment:
+      #   Variables:
+      #     ENV:
+      #       Fn::Sub: ${EnvName}
+      #     TZ: UTC
+      FunctionName: !Ref LambdaName # !Join ["-", [!Ref LambdaName, app]]
       PackageType: Image
       Role: arn:aws:iam::accountid:role/lambdarolename
       Timeout: !Ref LambdaTimeout
