--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -39,13 +39,14 @@ jobs:
           # fullimage_name: $ECR_REGISTRY/$ECR_REPOSITORY
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_RUN_NUMBER} app/
+          echo $fullimage_name:${GITHUB_RUN_NUMBER}
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_RUN_NUMBER} 
-          docker rmi  $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_RUN_NUMBER}       
-          echo $fullimage_name:${GITHUB_RUN_NUMBER} 
+          docker rmi  $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_RUN_NUMBER}   
+
           # docker build -t $fullimage_name:${GITHUB_RUN_NUMBER} app/
           # echo $fullimage_name:${GITHUB_RUN_NUMBER}
           # docker push $fullimage_name:${GITHUB_RUN_NUMBER}
-          # docker rmi $fullimage_name:${GITHUB_RUN_NUMBER}
+          # docker rmi $fullimage_name:${GITHUB_RUN_NUMBER}s
 
       # - name: Update CloudFormation Stack
       #   id: update-stack
