--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -36,7 +36,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: mlproject
-          # fullimage_name: $ECR_REGISTRY/$ECR_REPOSITORY
+          fullimage_name: $ECR_REGISTRY/$ECR_REPOSITORY
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_RUN_NUMBER} app/
           echo $fullimage_name:${GITHUB_RUN_NUMBER}
