--- a/Templates/basic_lambda_dockerImage.yml
+++ b/Templates/basic_lambda_dockerImage.yml
@@ -37,7 +37,7 @@ Resources:
       #     TZ: UTC
       FunctionName: !Ref LambdaName # !Join ["-", [!Ref LambdaName, app]]
       PackageType: Image
-      Role: !GetAtt AWSLambdaExecutionRole.Arn
+      Role: arn:aws:iam::400496050263:role/lambda-testing
       Timeout: !Ref LambdaTimeout
       Code:
         ImageUri: !Ref "EcrImageUri"
@@ -49,47 +49,47 @@ Resources:
           { "Key": "Stage", "Value": "QA" },
           { "Key": "Owner", "Value": "lambda" },
         ]
-  AWSLambdaExecutionRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Statement:
-          - Action:
-              - sts:AssumeRole
-            Effect: Allow
-            Principal:
-              Service:
-                - lambda.amazonaws.com
-        Version: "2012-10-17"
-      Path: "/"
-      Policies:
-        - PolicyDocument:
-            Statement:
-              - Action:
-                  - logs:CreateLogGroup
-                  - logs:CreateLogStream
-                  - logs:PutLogEvents
-                Effect: Allow
-                Resource: arn:aws:logs:*:*:*
-            Version: "2012-10-17"
-          PolicyName: !Sub ${AWS::StackName}-${AWS::Region}-AWSLambda-CW
-        - PolicyDocument:
-            Statement:
-              - Action:
-                  - s3:GetObject
-                  - s3:PutObject
-                  - s3:DeleteObject
-                  - s3:List*
-                  - ses:*
-                  - s3-object-lambda:*
-                  - ecr:*
-                  - cloudtrail:LookupEvents
-                  - cloudwatch:*
-                  - logs:*
-                  - sns:*
-                Effect: Allow
-                Resource: "*"
+  # AWSLambdaExecutionRole:
+  #   Type: AWS::IAM::Role
+  #   Properties:
+  #     AssumeRolePolicyDocument:
+  #       Statement:
+  #         - Action:
+  #             - sts:AssumeRole
+  #           Effect: Allow
+  #           Principal:
+  #             Service:
+  #               - lambda.amazonaws.com
+  #       Version: "2012-10-17"
+  #     Path: "/"
+  #     Policies:
+  #       - PolicyDocument:
+  #           Statement:
+  #             - Action:
+  #                 - logs:CreateLogGroup
+  #                 - logs:CreateLogStream
+  #                 - logs:PutLogEvents
+  #               Effect: Allow
+  #               Resource: arn:aws:logs:*:*:*
+  #           Version: "2012-10-17"
+  #         PolicyName: !Sub ${AWS::StackName}-${AWS::Region}-AWSLambda-CW
+  #       - PolicyDocument:
+  #           Statement:
+  #             - Action:
+  #                 - s3:GetObject
+  #                 - s3:PutObject
+  #                 - s3:DeleteObject
+  #                 - s3:List*
+  #                 - ses:*
+  #                 - s3-object-lambda:*
+  #                 - ecr:*
+  #                 - cloudtrail:LookupEvents
+  #                 - cloudwatch:*
+  #                 - logs:*
+  #                 - sns:*
+  #               Effect: Allow
+  #               Resource: "*"
 
-            Version: "2012-10-17"
-          PolicyName: !Sub ${AWS::StackName}-${AWS::Region}-AWSLambda-S3
-      RoleName: !Sub ${AWS::StackName}-${AWS::Region}-AWSLambdaExecutionRole
+  #           Version: "2012-10-17"
+  #         PolicyName: !Sub ${AWS::StackName}-${AWS::Region}-AWSLambda-S3
+  #     RoleName: !Sub ${AWS::StackName}-${AWS::Region}-AWSLambdaExecutionRole
