--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -58,4 +58,4 @@ jobs:
           # Only apply the changeset on pushes to main/release
           apply-change-set: ${{ github.event_name != 'pull_request' && github.event_name != 'repository_dispatch' }}
           aws-region: "us-east-1"
-          parameters: "LambdaName=mylamfortest&EcrImageUri=400496050263.dkr.ecr.us-east-1.amazonaws.com/mlproject:${GITHUB_RUN_NUMBER}"
+          parameters: "LambdaName=mylamfortest&EcrImageUri=400496050263.dkr.ecr.us-east-1.amazonaws.com/mlproject:$GITHUB_RUN_NUMBER"
