--- a/Templates/awscloudformation_lambda_s3.yml
+++ b/Templates/awscloudformation_lambda_s3.yml
@@ -69,7 +69,7 @@ Resources:
             # s3:ObjectCreated:Put
             # s3:ObjectCreated:Post
             # s3:ObjectCreated:Copy
-            Function: !GetAtt awslambdafunc2.Arn
+            Function: !GetAtt awslambdafunc.Arn
             Filter:
               S3Key:
                 Rules:
