--- a/.github/workflows/lambda_s3.yml
+++ b/.github/workflows/lambda_s3.yml
@@ -68,4 +68,4 @@ jobs:
           # parameter-overrides: >-
           #   LambdaName  = mylamfortest,
           #   EcrImageUri=${{ steps.build-image.outputs.image }}
-          parameters: "LambdaName=mylamfortest&BucketName=mybuck-dev&EcrImageUri=${{ steps.build-image.outputs.image }}"
+          parameters: "LambdaName=mylamfortest1&BucketName=mybuck-dev&EcrImageUri=${{ steps.build-image.outputs.image }}"
