--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -57,15 +57,28 @@ jobs:
       - name: Update CloudFormation Stack
         id: update-stack
         uses: badsyntax/github-action-aws-cloudformation@master
-
         if:
         with:
           stack-name: "suraj-cloudformation-stack"
           template: "./Templates/basic_lambda_dockerImage.yml"
-          # Only apply the changeset on pushes to main/release
+          # Only apply the changeset on pushes to main/cloudformation_lambda
           apply-change-set: ${{ github.event_name != 'pull_request' && github.event_name != 'repository_dispatch' }}
           aws-region: "us-east-1"
-          # parameter-overrides: >-
-          #   LambdaName  = mylamfortest,
-          #   EcrImageUri=${{ steps.build-image.outputs.image }}
+
           parameters: "LambdaName=mylamfortest&EcrImageUri=${{ steps.build-image.outputs.image }}"
+
+      - uses: badsyntax/github-action-issue-comment@master
+        name: Comment on Pull Request
+        if: github.event_name == 'pull_request'
+        with:
+          action: "create-clean"
+          template: ".github/pr-comment-template.hbs"
+          id: cloudformation
+          token: ${{ secrets.GITHUB_TOKEN }}
+          issue-number: ${{ github.event.pull_request.number }}
+          template-inputs: |
+            {
+              "changes": ${{ steps.update-stack.outputs.changes }},
+              "outputs": ${{ steps.update-stack.outputs.outputs }},
+              "applyChangeSet": ${{ github.event_name != 'pull_request' && github.event_name != 'repository_dispatch' }}
+            }
