--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -69,7 +69,7 @@ jobs:
 
       - uses: badsyntax/github-action-issue-comment@master
         name: Comment on Pull Request
-        if: github.event_name == 'push'
+        if: github.event_name == 'pull_request'
         with:
           action: "create-clean"
           template: ".github/pr-comment-template.hbs"
@@ -82,3 +82,6 @@ jobs:
               "outputs": ${{ steps.update-stack.outputs.outputs }},
               "applyChangeSet": ${{ github.event_name != 'pull_request' && github.event_name != 'repository_dispatch' }}
             }
+        env:
+          # Use outputs from the CloudFormation Stack
+          S3BucketName: ${{ steps.update-stack.outputs.LambdaName }}
