--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -8,8 +8,8 @@ on:
   repository_dispatch:
   pull_request:
   push:
-    branches:
-      - cloudformation_lambda
+    branches: [testing]
+    #- cloudformation_lambda
     paths:
       - ".github/workflows/lambda.yml"
       - "app/**"
