--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -1,8 +1,8 @@
 name: "deploy"
 
-concurrency:
-  group: prod_deploy
-  cancel-in-progress: false
+# concurrency:
+#   group: prod_deploy
+#   cancel-in-progress: false
 
 on:
   repository_dispatch:
@@ -65,21 +65,25 @@ jobs:
 
           parameters: "LambdaName=mylamfortest&EcrImageUri=${{ steps.build-image.outputs.image }}"
 
-      - uses: badsyntax/github-action-issue-comment@master
-        name: Comment on Pull Request
-        if: github.event_name == 'pull_request'
-        with:
-          action: "create-clean"
-          template: ".github/pr-comment-template.hbs"
-          id: cloudformation
-          token: ${{ secrets.GITHUB_TOKEN }}
-          issue-number: ${{ github.event.pull_request.number }}
-          template-inputs: |
-            {
-              "changes": ${{ steps.update-stack.outputs.changes }},
-              "outputs": ${{ steps.update-stack.outputs.outputs }},
-              "applyChangeSet": ${{ github.event_name != 'pull_request' && github.event_name != 'repository_dispatch' }}
-            }
+        # - uses: badsyntax/github-action-issue-comment@master
+        #   name: Comment on Pull Request
+        #   if: github.event_name == 'pull_request'
+        #   with:
+        #     action: "create-clean"
+        #     template: ".github/pr-comment-template.hbs"
+        #     id: cloudformation
+        #     token: ${{ secrets.GITHUB_TOKEN }}
+        #     issue-number: ${{ github.event.pull_request.number }}
+        #     template-inputs: |
+        #       {
+        #         "changes": ${{ steps.update-stack.outputs.changes }},
+        #         "outputs": ${{ steps.update-stack.outputs.outputs }},
+        #         "applyChangeSet": ${{ github.event_name != 'pull_request' && github.event_name != 'repository_dispatch' }}
+        #       }
         env:
           # Use outputs from the CloudFormation Stack
           S3BucketName: ${{ steps.update-stack.outputs.LambdaName }}
+
+      - name: packaging the lambda to s3
+        run: |
+          aws cloudformation package --template-file /Templates/basic_lambda_dockerImage.yml --output-template packaged-stack.yaml --s3-bucket mylamfortest
