--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -86,4 +86,6 @@ jobs:
 
       - name: packaging the lambda to s3
         run: |
-          aws cloudformation package --template-file ./Templates/basic_lambda_dockerImage.yml --output-template packaged-stack.yaml --s3-bucket mylamfortest
+          aws cloudformation package --template-file ./Templates/basic_lambda_dockerImage.yml  --s3-bucket mylamfortest --output-template-file  ./packaged-stack.yaml
+
+# aws cloudformation package --template-file /path_to_template/template.json --s3-bucket bucket-name --output-template-file packaged-template.json
