--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -43,14 +43,7 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_RUN_NUMBER} app/
 
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_RUN_NUMBER} 
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_RUN_NUMBER" 
-          # docker rmi  $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_RUN_NUMBER}
-
-
-          # docker build -t $fullimage_name:${GITHUB_RUN_NUMBER} app/
-          # echo $fullimage_name:${GITHUB_RUN_NUMBER}
-          # docker push $fullimage_name:${GITHUB_RUN_NUMBER}
-          # docker rmi $fullimage_name:${GITHUB_RUN_NUMBER}
+          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_RUN_NUMBER"
 
       - name: Update CloudFormation Stack
         id: update-stack
@@ -86,6 +79,6 @@ jobs:
 
       - name: packaging the lambda to s3
         run: |
-          aws cloudformation package --template-file ./Templates/basic_lambda_dockerImage.yml  --s3-bucket mylamfortest  --s3-prefix  appname --output-template-file  pack-stack.yaml
+          aws cloudformation package --template-file ./Templates/basic_lambda_dockerImage.yml  --s3-bucket mylamfortest  --s3-prefix  appname --output-template-file  template.packaged.yml
 
 # aws cloudformation package --template-file /path_to_template/template.json --s3-bucket bucket-name --output-template-file packaged-template.json
