--- a/.github/workflows/lambda_s3.yml
+++ b/.github/workflows/lambda_s3.yml
@@ -5,8 +5,8 @@ concurrency:
   cancel-in-progress: false
 
 on:
-  repository_dispatch:
-  pull_request:
+  # repository_dispatch:
+  # pull_request:
   push:
     branches:
       - cloudformation_lambda
