--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -44,7 +44,7 @@ jobs:
 
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_RUN_NUMBER} 
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_RUN_NUMBER"
-          aws cloudformation package --template-file ./Templates/basic_lambda_dockerImage.yml --s3-bucket mylamfortest  --s3-prefix cloudformation/packages --output-template-file  s3://mylamfortest/cloudformation/packages/newtemplate.yml
+          aws cloudformation package --template-file ./Templates/basic_lambda_dockerImage.yml --s3-bucket mylamfortest  --s3-prefix cloudformation/packages --output-template-file  newtemplate.yml
 
       - name: Update CloudFormation Stack
         id: update-stack
