--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -46,18 +46,25 @@ jobs:
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_RUN_NUMBER"
           aws cloudformation package --template-file ./Templates/basic_lambda_dockerImage.yml --s3-bucket mylamfortest  --s3-prefix cloudformation/packages --output-template-file  newtemplate.yml
 
-      - name: Update CloudFormation Stack
-        id: update-stack
-        uses: badsyntax/github-action-aws-cloudformation@master
-        if:
+      - name: Deploy to AWS CloudFormation
+        uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
-          stack-name: "suraj-cloudformation-stack"
+          name: "suraj-cloudformation-stack"
           template: "./Templates/basic_lambda_dockerImage.yml"
-          # Only apply the changeset on pushes to main/cloudformation_lambda
-          apply-change-set: ${{ github.event_name != 'pull_request' && github.event_name != 'repository_dispatch' }}
-          aws-region: "us-east-1"
+          no-fail-on-empty-changeset: "1"
+          parameter-overrides: "LambdaName=mylamfortest,EcrImageUri=${{ steps.build-image.outputs.image }}"
+            - name: Update CloudFormation Stack
+              id: update-stack
+              uses: badsyntax/github-action-aws-cloudformation@master
+        # if:
+        # with:
+        #   stack-name: "suraj-cloudformation-stack"
+        #   template: "./Templates/basic_lambda_dockerImage.yml"
+        #   # Only apply the changeset on pushes to main/cloudformation_lambda
+        #   apply-change-set: ${{ github.event_name != 'pull_request' && github.event_name != 'repository_dispatch' }}
+        #   aws-region: "us-east-1"
 
-          parameters: "LambdaName=mylamfortest&EcrImageUri=${{ steps.build-image.outputs.image }}"
+        #   parameters: "LambdaName=mylamfortest&EcrImageUri=${{ steps.build-image.outputs.image }}"
 
         # - uses: badsyntax/github-action-issue-comment@master
         #   name: Comment on Pull Request
@@ -74,9 +81,9 @@ jobs:
         #         "outputs": ${{ steps.update-stack.outputs.outputs }},
         #         "applyChangeSet": ${{ github.event_name != 'pull_request' && github.event_name != 'repository_dispatch' }}
         #       }
-        env:
+        # env:
           # Use outputs from the CloudFormation Stack
-          S3BucketName: ${{ steps.update-stack.outputs.LambdaName }}
+          # S3BucketName: ${{ steps.update-stack.outputs.LambdaName }}
 
         # - name: packaging the lambda to s3
         # run: |
